--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: "Afacad", sans-serif;
+}
+
+/* style scrollbar */
+*::-webkit-scrollbar {
+  @apply w-[8px] md:w-[12px];
+}
+*::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
+*::-webkit-scrollbar-thumb {
+  @apply rounded-full bg-secordary;
+}
+*::-webkit-scrollbar-thumb:hover {
+  @apply bg-secordary;
+}
+*::-webkit-scrollbar-thumb:active {
+  @apply bg-secordary;
+}
