--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,17 +8,17 @@
 
 /* style scrollbar */
 *::-webkit-scrollbar {
-  @apply w-[8px] md:w-[12px];
+  @apply w-[5px];
 }
 *::-webkit-scrollbar-track {
   @apply bg-transparent;
 }
 *::-webkit-scrollbar-thumb {
-  @apply rounded-full bg-secordary;
+  @apply bg-secondary;
 }
 *::-webkit-scrollbar-thumb:hover {
-  @apply bg-secordary;
+  @apply bg-secondary;
 }
 *::-webkit-scrollbar-thumb:active {
-  @apply bg-secordary;
+  @apply bg-secondary;
 }
